# DigitalKHole.book

./: .gitignore  Cargo.toml  PAGE_TANKA_TEMPLATE.fods  PROMPT.md  README.md  TODO.md  build.rs  index.html  justfile  prompt.md  style.css
content/: 1.fragmentedpoem  1.from_print_version.fragmentedpoem  10.fragmentedpoem  2.fragmentedpoem  3.fragmentedpoem  4.fragmentedpoem  5.fragmentedpoem  6.fragmentedpoem  7.fragmentedpoem  8.fragmentedpoem  9.fragmentedpoem  best friend.tanka.yml  best friend.yml  brimming potential.tanka.yml  can't change the past.tanka.yml  corporate efficiency.tanka.yml  gaiaonline black hole.tanka.yml  gaiaonline black hole.yml  latex sea asphyxiate.tanka.yml  mom.tanka.yml  mono no aware.tanka.yml  null2.tanka.yml  pathetic hunting-dog girl.tanka.yml  pour all of your hate into me.tanka.yml  roatary__toaster and wafflepwn.tanka.yml  some of my favorite things.tanka.yml  target oracle grinder apparatus v2.tanka.yml  template.meta.tanka.yml  template.meta.yml
src/: main.rs
systemd/: digitalkhole-book.service
