[package]
name = "digital-khole"
version = "0.1.0"
edition = "2021"

[dependencies]
leptos = { version = "0.7", features = ["csr"] }
leptos_router = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
qrcode = "0.14"
image = { version = "0.25", default-features = false, features = ["png"] }
base64 = "0.22"
console_error_panic_hook = "0.1"
wasm-bindgen = "0.2"

[profile.release]
lto = true
opt-level = 'z'
